<resources>
    <string name="napis_create_plan">Create plan</string>
    <string name="napis_create_portfolio">Create portfolio</string>
    <string name="app_name">CashSensei</string>
    <string name="the_future_of_finance_is_here">The future is here!</string>
    <string name="portfolio_activity">Portfolio activity</string>
    <string name="progressBarText">Let\'s start!</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CashSensei | By Simon &amp; Leon</string>
    <string name="nav_header_subtitle">Financial advisor in your pocket</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home/Refresh</string>
    <string name="menu_portfilo_name">My Portfolio</string>
    <string name="menu_about_app">About app</string>
    <string name="btn_login">Login</string>
    <string name="btn_create_account">Create account</string>
    <string name="create_account"><u>Create account</u></string>
    <string name="login"><u>Login</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading...</string>
    <string name="portfolio_asset">Asset</string>
    <string name="portfolio_target">Target</string>
    <string name="portfolio_current">Current</string>
    <string name="change_budget">Change Budget</string>
    <string name="toggle_pie_chart">Toggle Pie Chart</string>
    <string name="enter_new_value">Enter new value:</string>
    <string name="enter_your_budget">Enter your budget</string>
    <string name="confirm">Confirm</string>
    <string name="question">Question</string>
    <string name="answer1">Answer1</string>
    <string name="current_value">Current Value</string>
    <string name="target_value">Target Value</string>
    <string name="asset">Asset</string>
    <string name="what_is_your_investment_budget">What is your investment budget?</string>
    <string name="what_is_your_birth_date">What is your birth date?</string>
    <string name="warming_up">Warming up!</string>
    <string name="value">"Value: "</string>
    <string name="budget">"Budget "</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="logout_dialog">Logout</string>
    <string name="recommended_portfolio">"Recommended portfolio: "</string>
</resources>