<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="si.uni_lj.fe.tnuv.projekt_tnuv_1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_portfolio_1"
        android:name="si.uni_lj.fe.tnuv.projekt_tnuv_1.ui.gallery.GalleryFragment"
        android:label="@string/menu_portfilo_name"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_about_app"
        android:name="si.uni_lj.fe.tnuv.projekt_tnuv_1.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_about_app"
        tools:layout="@layout/fragment_slideshow" />
</navigation>