<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="@color/ozadje"
    >

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/cashsensei_logo" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/cashsensei_text_logo" />

    <EditText
        android:id="@+id/field_username"
        style="@style/EditTextStyle"
        android:hint="@string/email"
        android:textColor="@color/text_light_gray"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/field_password"
        style="@style/EditTextStyle"
        android:hint="@string/password"
        android:textColor="@color/text_light_gray"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:layout_width="300dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_account"
        android:padding="10dp"
        android:background="@drawable/btn_rectangular"
        android:width="200dp"
        android:textAllCaps="false"
        android:textSize="16dp"
        android:textColor="@color/btn_text_light_mode"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/login"
        android:textColor="@color/text_light_gray"
        android:layout_marginBottom="90dp"
        android:textSize="14sp" />

</LinearLayout>
